=== Deluge 1.2.0_rc2 (In Development) ===
==== GtkUI ====
  * Fix path errors when adding torrents externally in Windows
  * Fix localclient authentication by stripping the lines read from the auth file

==== Misc ====
  * Add man pages for deluge-console and deluge-gtk

=== Deluge 1.2.0_rc1 (07 October 2009) ===
==== Core ====
  * Implement new RPC protocol DelugeRPC replacing XMLRPC
  * Move to a twisted framework
  * Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
  * Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
  * Remove SignalReceiver
  * Implemented a cross-platform IPC method thus removing the DBUS dependency
  * Implement a "True" Classic Mode where there is no longer a separate daemon process
  * Add preferences option "Add torrent in paused state"
  * Add tracker icons to the Tracker column
  * Implement #259 show tooltip with country name in the peers tab
  * Add an error category to the tracker sidebar list
  * Add Find More Plugins button to Plugins preference page
  * Fix #518 remove header in add torrent dialog to save vertical space
  * Add a Cache preferences page to adjust cache settings and examine cache status
  * Add ability to rename files prior to adding them
  * Fix shutdown handler with GNOME session manager
  * Allow 4 MiB piece sizes when creating a torrent

==== ConsoleUI ====
  * Changed to use curses for a more interactive client

==== WebUI ====
  * Move over to using Twisted-Web for the webserver.
  * Move to only AJAX interface built upon Ext-JS.

==== Plugins ====
  * Add Scheduler plugin
  * Add Extractor plugin

==== Misc ====
  * PyGTK dependency bumped to => 2.12 to use new tooltip system
  * Add new scripts for invoking UIs: deluge-gtk, deluge-web, deluge-console
  * Remove GeoIP database from the source tree

=== Deluge 1.1.9 - (15 June 2009) ===
==== Core ====