@@ -2,7 +2,11 @@
 ==== GtkUI ====
   * Fix path errors when adding torrents externally in Windows
   * Fix localclient authentication by stripping the lines read from the auth file
+  * Do not try to call doIteration() on the reactor if it has already stopped
 
+==== Core ====
+  * Fix saving torrent state on fresh configs
+  
 ==== Misc ====
   * Add man pages for deluge-console and deluge-gtk
 
